# BowlingSimulator

./: CMakeLists.txt  Project 2 Documentation.docx  README.md  main.cpp  run.ps1
.cache/clangd/index/: Font.cpp.86F2D52846E3C310.idx  Font.cpp.E2B4CF5DEAC65646.idx  Font.cpp.F7C03E45F0F1A359.idx  Font.hpp.10A4320706E12E48.idx  Font.hpp.171455EF95693CC6.idx  Font.hpp.9DC339E406FDB2AA.idx  Shader.cpp.013ECFADF7A3C46F.idx  Shader.cpp.9011B8120C1F72AF.idx  Shader.cpp.DB19761DBCA0D115.idx  Shader.hpp.0B11712311810A72.idx  Shader.hpp.73723CACD89777A2.idx  Shader.hpp.97F5702CC97F4B12.idx  basic_shape.cpp.02C1ED30153CC97D.idx  (+76 more)
classes/: Shader.cpp  Shader.hpp  basic_shape.cpp  basic_shape.hpp  bowling_ball.cpp  bowling_ball.hpp  bowling_pin.cpp  bowling_pin.hpp  camera.cpp  camera.hpp  game_state.cpp  game_state.hpp  import_object.cpp  import_object.hpp  release_assembly_arm.cpp  release_assembly_arm.hpp  rotation_arrow.cpp  rotation_arrow.hpp  ship.cpp  ship.hpp  velocity_arrow.cpp  velocity_arrow.hpp  vertex_attribute.cpp  vertex_attribute.hpp
fonts/: ArialBlack.csv  Font.cpp  Font.hpp
joycon/: joycon.py
joycon/joycon_cpp/: joycon.cpp  joycon.hpp  run.ps1
joycon/pyjoycon_env/: pyvenv.cfg
joycon/tmp/: joycon_status.json
models/: BowlingBall.mtl  BowlingLane.mtl  Pin.mtl  Pinsetter.blend  Pinsetter.blend1  ReleaseAssemblyArm.mtl  RotationArrow.mtl  Television.mtl  VelocityArrow.mtl
shaders/: fontFragmentShader.glsl  fragment.glsl  skyBoxVertex.glsl  vertex.glsl
support/: build_shapes.cpp  build_shapes.hpp  environment_setup.hpp  glad.c  stb_image_implementation.hpp
(+2 files in other folders)
